assets/style.css
.container{
    background-color:lightgrey;
    height:1000px;
}
.Navigation

{
 
 height:90px;
 left:90px;
 top:0px;
 right:1432px;
 background-color: white;
 margin-bottom:80px;

 }



 
 
 .Navigation  h6
 {
     width:200px;
     height:90px;
     background-color: #4aaaa5;
     text-align: center;
     margin-left: 200px;
     margin-right: 200px;
     padding-top:28px;
     font-size: 30px;
     font-family: 'Georgia', Times, Times New Roman, serif;
     color: white;
 }
 
 .Navigation h6 a
 {
     text-decoration: none;
     color:white;
 }
  nav
  {
      float:right;
      width: 400px;
      height:69px;
      left:889px;
      top:23px;
      right:1126px;
      bottom:82px;
      position: absolute;
      font-family: 'Georgia', Times, Times New Roman, serif;
     
      
      }
      nav ul{
          list-style: none;
      }
     
 nav ul li
 {
     margin: 30px 0 0 60px;
     padding-right:10px;
    
     
 }
 nav ul li a
 {
     text-decoration: none;
     padding: 5px;
     text-align: center;
     color: grey;
     text-decoration-line: initial;
     margin-right:15px;
   
 
 }
  
 a:active
 {
     color:black;
 }
 
 a:hover{
     color:darkgray;
     background-color: #ddd;
 }
 
 
 
 .hero
 {
     width:961px;
     height:650px;
     background-color:white;
     margin-left: 75px;
     border-style:solid;
     border-radius: 5px;
     border-width: .5px;
     border-color: grey;
     margin-bottom:100px;
 }
 
 
 .text{
   
     text-align: center;
     margin: 0 60px 0 0;
     float:right;
    font-family: 'sans-serif';
     letter-spacing: .5px;;
 
 }
 .image 
 {
     padding-left: 50px;
     padding-top: 80px;
     float:left;
     width: 33%;
     
 }
 .text1
 {

     
     width: 85%;
     margin-top: 80px;
     letter-spacing: 1px;
     line-height: 21px;
     margin-left:50px;
 }
 
     
 .hero h3
 {
     padding-left:50px;
     font-size: 50px;
     padding-top: 30px;
     font-family: 'Georgia', Times, Times New Roman, serif;
     border-bottom-style: solid;
     border-width: 5px;
     border-color:lightgrey;
     padding-bottom: 10px;
     color: #4aaaa5;
     margin: 0 10px 0 10px;
 }
 .hero p
 {
     line-height: 28.5px;
     font-family: 'Hi Melody', cursive;
 
 }
 .footer1
 {
     border-top-style: solid;
     border-width: 10px;
     border-color:#4aaaa5;
     left:100px;
     top:506px;
     right:1158px;
     bottom:596px;
     background-color:grey;
    
 }
 
 footer h4
 {
     text-align: center;
     padding-top:70px;
     color:white;
 }
 /* contact */
 .f1
 {
     margin-left:100px;
     margin-right:100px;
     background-color:white;
     
 }
 .f1 h4
 {
     margin-left:50px;
     margin-right:50px;
     padding-bottom:30px;
     padding-left:20px;
     padding-top:40px;
     color:#4aaaa5;
     font-size: 30px;
     font-family: 'Georgia', Times, Times New Roman, serif;
     border-bottom: solid;
     border-width:4px;
     border-color:lightgrey;
   
     
 }
 #fname
 {
     margin-top:20px;
 }
 .f1 p,input[type=text]
 {
        width:85%;
        border-radius: 4px;
        font-family: 'Georgia', Times, Times New Roman, serif;
        padding-top: 10px;
 }
 
 .f1 form p
 {
     padding-left:70px;
     padding-bottom:15px;
 }
 
 
     .button input[type=submit]
     {
     margin-top:18px;
     background-color:#4aaaa5;
     font-family: 'Georgia', Times, Times New Roman, serif;
     color: white;
     padding:7px;
 }
 
 .f1 textarea
 {
     margin-left:70px;
     font-family: 'Georgia', Times, Times New Roman, serif;
   
 }
    /*portfolio*/
  .container1
  {
      width:100%;
      max-width:960px;
     background-color: white;
      margin:auto;
      margin-bottom:80px;
  }
 
 .container1 h4
 {
    font-family: 'Georgia', Times, Times New Roman, serif;
     font-size: 30px;
     padding-left: 50px;
     padding-top:40px;
     padding-bottom:30px;
     color: #4aaaa5;
     border-bottom-style:solid;
     border-color: lightgrey;
     border-width: 5px;
     
     margin:0 10px 70px 10px;
    
 }
     
 
 .img-text
 {
    width: 200px;
   height:25px;
    position: absolute;
   margin-top:170px;
    color:white;
    background-color:#4aaaa5;
    text-align: center;
    border-radius: 5px;
 }

 .img
 {
    
     float:left;
     width: 33%;
     Margin-left:20px;
 }
 .img1{
  
     float:left;
     width:33%;
 }

 
 .img2 {
     float:left;
     width:23%;
     
 }
 

   .img3
 {
     float:left;
     width: 33%;
     margin-left: 20px;
     margin-top: 30px;
 }
  
  .img4 
  {
     float:left;
     width:10px;
     margin-top: 30px;
 }
@media screen and (max-width: 700px)
{
 .img1 {
    width: 100%;

    
    
}
 .img 
 {
     width: 100%;
     
 }
 .img2
  {
    width: 100%;
    
}
.img3 
{
    width: 100%;
    
}
.img4 
{
    width: 100%;
    
}


}

@media screen and (max-width: 400px)
{
    .img1 {
        width: 20%;
    
        
        
    }
     .img 
     {
         width: 20%;
         
     }
     .img2
      {
        width: 20%;
        
    }
    .img3 
    {
        width: 20%;
        
    }
    .img4 
    {
        width: 20%;
        
    }
}

